tests/codegen/pass/031-top-level-3.hyg
let x: int = 40;

fun h(k: () -> int): int = k();
fun clos(y: int): () -> int = fun() -> x + y + 1;

assert(h(clos(41)) = 82)