tests/codegen/fail/031-top-level.hyg
let x: int = 40;
let f: () -> int = fun() -> 1 + x;
assert(f() = 41)